<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">


    <string name="uri_hint">Enter a URI (http/mmsh/file/etc.)</string>
    <string name="uri_error">Enter a token or click get token</string>
    <string name="go">Start</string>
    <string name="no_metadata">No metadata</string>
    <string name="error_message">Metadata could not be retrieved</string>
    <string name="artwork">Artwork</string>

    <!-- Default name of artist that doesn't have a name in the metadata -->
    <string name="unknown_artist_name">Unknown artist</string>
    <!-- Default name of album that doesn't have a name in the metadata -->
    <string name="unknown_album_name">Unknown album</string>

    <!-- Do not translate. Duration format for duration < 1 hour -->
    <string translatable="false" name="durationformatshort"><xliff:g id="format">%2$d:%5$02d</xliff:g></string>
    <!-- Do not translate. Duration format for duration >= 1 hour -->
    <string translatable="false" name="durationformatlong"><xliff:g id="format">%1$d:%3$02d:%5$02d</xliff:g></string>

    <!-- Shuffle -->
    <string name="shuffle_on_notif">Shuffle is on</string>
    <string name="shuffle_off_notif">Shuffle is off</string>

    <!-- Repeat -->
    <string name="repeat_off_notif">Repeat is off</string>
    <string name="repeat_current_notif">Repeating current media</string>
    <string name="repeat_all_notif">Repeating all media</string>

    <!--  Widget -->
    <string name="widget_one_track_info_unavailable">"No track info available"</string>

    <!-- Mediaplayer messages -->
    <string name="buffering_message">Buffering. Please wait&#8230;</string>
    <string name="playback_failed">Sorry, the player does not support this type of media file.</string>
    <string name="service_start_error_title">Playback problem</string>
    <string name="service_start_error_msg">Sorry, the media could not be played.</string>

    <string name="hour">1 hour</string>
    <string name="hours"><xliff:g id="hours">%s</xliff:g> hours</string>
    <string name="minute">"1 minute"</string>
    <string name="minutes">"<xliff:g id="minutes">%s</xliff:g> minutes"</string>
    <string name="label_volume">デフォルト音量</string>
    <string name="volume_too_low">デフォルト音量が設定されています。音量を上げてみてください。</string>
    <string name="loading">ロード中 &#8230;</string>
    <string name="choose_program">Choose a program</string>
    <string name="button_share_facebook">Share</string>
    <string name="default_program_objId">1665349930372113</string>
    <string name="label_login_with_facebook">Facebook にログイン</string>
    <string name="app_id" translatable="false">884488071628837</string>
    <string name="label_enter_radiko_user">Radikoプレミアム</string>
    <string name="radiko_email">Radikoユーザ名（メール）</string>
    <string name="radiko_password">パスワード</string>
    <string name="got_trouble_while_sharing_facebook">Got some trouble while sharing to facebook</string>
    <string name="start_check_radiko_account">Radikoプレミアム認証中</string>
    <string name="login_radiko_success">Radikoプレミアム認証成功しました</string>
    <string name="login_radiko_failed">Radiko プレミアム認証が失敗しました</string>
    <string name="log_out">ログアウト</string>
    <string name="login">ログイン</string>
    <string name="radiko_premium_support_warning">録音ラジオサーバーでは、Radikoプレミアムへの対応を
開始しました。\n\nRadikoプレミアムに加入されている方は、下記からログインして下さい。</string>
    <string name="dont_ask_again">次回から、この画面を表示しない。</string>

</resources>
